<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/pink"
        android:layout_gravity="center"
        android:text="@string/first_row"
        android:textSize="35sp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:layout_gravity="center"
        android:text="@string/second_row"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cyan"
        android:layout_gravity="center"
        android:text="@string/third_row"
        android:textSize="35sp"/>
</LinearLayout>