<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/teal_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingVertical="80dp">


        <TextView
            android:id="@+id/constraintHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="KYC Form"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/constraintFullNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:hint="Full Name"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/constraintHeadingText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"/>

        <LinearLayout
            android:id="@+id/constraintButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintFullNameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:stateListAnimator="@null"
                android:text="About"
                android:textColor="@color/black"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:stateListAnimator="@null"
                android:text="Cancel"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/constraintSportLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sportText"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/constraintButtonContainer"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/constraintCheckBoxContainerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintSportLabel">

            <CheckBox
                android:id="@+id/constraintCheckBoxFootball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/football"/>

            <CheckBox
                android:id="@+id/constraintCheckBoxVolleyball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/volleyball"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintCheckBoxContainerSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxContainerTop">

            <CheckBox
                android:id="@+id/constraintCheckBoxBasketball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/basketball"/>

            <CheckBox
                android:id="@+id/constraintCheckBoxBadminton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/purple_500"
                android:text="@string/badminton"/>
        </LinearLayout>

        <TextView
            android:id="@+id/constraintGenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/genderText"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxContainerSecond"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/constraintCheckBoxGenderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/constraintGenderLabel">

            <RadioGroup
                android:id="@+id/constraintRadioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/constraintGenderLabel">

                <RadioButton
                    android:id="@+id/constraintRadioMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/purple_500"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/constraintRadioFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/purple_500"
                    android:text="@string/female"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/constraintCountryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Which country are you from?"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/constraintCheckBoxGenderContainer"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/constraintCountrySpinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:entries="@array/country_list"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/constraintCountryLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"/>

        <ImageView
            android:id="@+id/constraintImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/myimage"
            android:contentDescription="Sample Image"
            app:layout_constraintTop_toBottomOf="@id/constraintCountrySpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
