<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/teal_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingVertical="80dp">

        <ImageView
            android:id="@+id/mylogo"
            android:layout_width="119dp"
            android:layout_height="118dp"
            android:contentDescription="App Logo"
            android:scaleType="centerCrop"
            android:src="@drawable/myicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mybrandname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Babu Nitesh"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/mylogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="Enter your name"
            android:paddingStart="10dp"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/entername1"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/mybrandname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="Enter your Email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/enteremail"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="Enter your Phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="Enter your Password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/GenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderText"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" />

        <RadioGroup
            android:id="@+id/constraintRadioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/GenderLabel"
            android:paddingHorizontal="30dp">

            <RadioButton
                android:id="@+id/constraintRadioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/constraintRadioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/CountryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/countrylist"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/constraintRadioGroupGender"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" />

        <Spinner
            android:id="@+id/constraintCountrySpinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:entries="@array/country_list"
            app:layout_constraintTop_toBottomOf="@id/CountryLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"
            android:layout_marginTop="5dp" />

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/constraintCountrySpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/myButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintTop_toBottomOf="@id/termsCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
